--- a/package.json
+++ b/package.json
@@ -7,21 +7,25 @@
   "dependencies": {
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.4",
+    "autoprefixer": "^10.2.3",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.28.0",
     "gatsby-image": "^2.7.0",
     "gatsby-plugin-manifest": "^2.8.0",
     "gatsby-plugin-offline": "^3.6.0",
+    "gatsby-plugin-postcss": "^3.6.0",
     "gatsby-plugin-react-helmet": "^3.6.0",
     "gatsby-plugin-sass": "^2.7.0",
     "gatsby-plugin-styled-components": "^3.9.0",
     "gatsby-source-filesystem": "^2.7.0",
     "node-sass": "^4.14.1",
+    "postcss": "^8.2.4",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "gatsby-plugin-scss-typescript": "^4.0.13",
