--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "devDependencies": {
     "gatsby-plugin-scss-typescript": "^4.0.13",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "tailwind-styled-components": "^1.0.7"
   },
   "keywords": [
     "gatsby"
