--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Mathias <mathias@codeshape.io>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.4",
     "autoprefixer": "^10.2.3",
@@ -12,18 +14,24 @@
     "gatsby": "^2.28.0",
     "gatsby-image": "^2.7.0",
     "gatsby-plugin-manifest": "^2.8.0",
+    "gatsby-plugin-mdx": "^1.9.0",
     "gatsby-plugin-offline": "^3.6.0",
     "gatsby-plugin-postcss": "^3.6.0",
     "gatsby-plugin-react-helmet": "^3.6.0",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.7.0",
+    "gatsby-plugin-sharp": "^2.13.1",
     "gatsby-plugin-styled-components": "^3.9.0",
     "gatsby-source-filesystem": "^2.7.0",
+    "gatsby-source-graphcms": "^2.1.1",
+    "gatsby-transformer-sharp": "^2.11.0",
     "node-sass": "^4.14.1",
     "postcss": "^8.2.4",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2"
   },
