--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/mdx-js__react": "^1.5.3",
     "gatsby-plugin-scss-typescript": "^4.0.13",
-    "prettier": "2.1.2",
+    "prettier": "2.1.2"
   },
   "keywords": [
     "gatsby"
