--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "gatsby-source-graphcms": "^2.2.0",
     "gatsby-transformer-sharp": "^2.11.0",
     "node-sass": "^4.14.1",
+    "postcss": "^8.2.4",
     "prism-react-renderer": "^1.1.1",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
