--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
+    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
+    "react-lazy-load": "^3.1.13",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
