--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "gatsby-plugin-react-helmet": "^3.6.0",
     "gatsby-plugin-sharp": "^2.13.4",
     "gatsby-plugin-styled-components": "^3.9.0",
+    "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-source-filesystem": "^2.7.0",
     "gatsby-source-graphcms": "^2.2.0",
+    "gatsby-transformer-remark": "^2.16.0",
     "gatsby-transformer-sharp": "^2.11.0",
     "postcss": "^8.2.4",
     "prop-types": "^15.7.2",
