--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
+# enables GraphCMS 
 GRAPHCMS_ENDPOINT=""
 GRAPHCMS_TOKEN=""
+
+# enables Disqus comments for article posts
+GATSBY_DISQUS_NAME=insertValue
