--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 # enables GraphCMS 
-GRAPHCMS_ENDPOINT=""
-GRAPHCMS_TOKEN=""
+GRAPHCMS_ENDPOINT="insertValue"
+GRAPHCMS_TOKEN="insertValue"
 
 # enables Disqus comments for article posts
-GATSBY_DISQUS_NAME=insertValue
+GATSBY_DISQUS_NAME="insertValue"
+
+# enables search with Algolia
+ALGOLIA_APP_ID="insertValue"
+ALGOLIA_API_KEY="insertValue"
+ALGOLIA_INDEX_NAME="insertValue"
