--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@mdx-js/react": "^1.6.22",
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.4",
+    "algoliasearch": "^4.8.5",
     "autoprefixer": "^10.2.3",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.28.0",
     "gatsby-image": "^2.10.0",
+    "gatsby-plugin-algolia": "^0.16.3",
     "gatsby-plugin-manifest": "^2.8.0",
     "gatsby-plugin-mdx": "^1.9.0",
     "gatsby-plugin-offline": "^3.6.0",
@@ -31,6 +33,7 @@
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
+    "react-instantsearch-dom": "^6.9.0",
     "react-lazy-load": "^3.1.13",
     "styled-components": "^5.2.1"
   },
