--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.5",
     "prettier": "2.1.2"
   },
   "keywords": [
