--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-helmet": "^6.1.0",
     "react-instantsearch-dom": "^6.9.0",
     "react-lazy-load": "^3.1.13",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "styled-icons": "^10.28.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.5",
