--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.4",
     "algoliasearch": "^4.8.5",
-    "animate.css": "^4.1.1",
-    "aos": "^3.0.0-beta.6",
     "autoprefixer": "^10.2.3",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.28.0",
@@ -22,7 +20,6 @@
     "gatsby-plugin-offline": "^3.6.0",
     "gatsby-plugin-postcss": "^3.7.0",
     "gatsby-plugin-react-helmet": "^3.6.0",
-    "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-sharp": "^2.13.4",
     "gatsby-plugin-styled-components": "^3.9.0",
     "gatsby-remark-reading-time": "^1.1.0",
@@ -33,16 +30,13 @@
     "postcss": "^8.2.4",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-animate-on-scroll": "^2.1.5",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-instantsearch-dom": "^6.9.0",
     "react-lazy-load": "^3.1.13",
-    "socket.io": "^3.1.1",
     "styled-components": "^5.2.1",
-    "styled-icons": "^10.28.0",
-    "yargs": "^16.2.0"
+    "styled-icons": "^10.28.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.5",
