--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "postcss": "^8.2.4",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-instantsearch-dom": "^6.9.0",
     "react-lazy-load": "^3.1.13",
     "styled-components": "^5.2.1",
-    "styled-icons": "^10.28.0"
+    "styled-icons": "^10.28.0",
+    "utterances-react": "^0.1.3"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.5",
