--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "algoliasearch": "^4.8.5",
     "autoprefixer": "^10.2.3",
     "babel-plugin-styled-components": "^1.12.0",
+    "framer": "^1.2.26",
+    "framer-motion": "^3.10.0",
     "gatsby": "^2.28.0",
     "gatsby-image": "^2.10.0",
     "gatsby-plugin-algolia": "^0.16.3",
