--- a/package.json
+++ b/package.json
@@ -9,40 +9,47 @@
     "@mdx-js/react": "^1.6.22",
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.4",
-    "algoliasearch": "^4.8.5",
-    "autoprefixer": "^10.2.3",
+    "algoliasearch": "^4.8.6",
+    "autoprefixer": "^10.2.5",
     "babel-plugin-styled-components": "^1.12.0",
+    "dotenv-webpack": "^7.0.1",
+    "firebase": "^8.2.10",
     "framer": "^1.2.26",
-    "framer-motion": "^3.10.0",
-    "gatsby": "^2.28.0",
-    "gatsby-image": "^2.10.0",
+    "framer-motion": "^3.10.2",
+    "gatsby": "^3.0.4",
+    "gatsby-image": "^3.0.0",
     "gatsby-plugin-algolia": "^0.16.3",
-    "gatsby-plugin-manifest": "^2.8.0",
-    "gatsby-plugin-mdx": "^1.9.0",
-    "gatsby-plugin-offline": "^3.6.0",
-    "gatsby-plugin-postcss": "^3.7.0",
-    "gatsby-plugin-react-helmet": "^3.6.0",
-    "gatsby-plugin-sharp": "^2.13.4",
-    "gatsby-plugin-styled-components": "^3.9.0",
+    "gatsby-plugin-create-client-paths": "^3.0.0",
+    "gatsby-plugin-firebase": "^0.2.0-beta.4",
+    "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-mdx": "^2.0.0",
+    "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-postcss": "^4.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-styled-components": "^4.0.0",
     "gatsby-remark-reading-time": "^1.1.0",
-    "gatsby-source-filesystem": "^2.7.0",
-    "gatsby-source-graphcms": "^2.2.0",
-    "gatsby-transformer-remark": "^2.16.0",
-    "gatsby-transformer-sharp": "^2.11.0",
-    "postcss": "^8.2.4",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-source-graphcms": "^2.3.0",
+    "gatsby-transformer-remark": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
+    "postcss": "^8.2.8",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-firebaseui": "^4.1.0",
     "react-helmet": "^6.1.0",
-    "react-instantsearch-dom": "^6.9.0",
+    "react-instantsearch-dom": "^6.10.3",
     "react-lazy-load": "^3.1.13",
     "styled-components": "^5.2.1",
-    "styled-icons": "^10.28.0",
+    "styled-icons": "^10.29.0",
+    "tailwindcss": "^2.0.3",
     "utterances-react": "^0.1.3"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.5",
-    "prettier": "2.1.2"
+    "prettier": "^2.2.1"
   },
   "keywords": [
     "gatsby"
