--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
-# enables GraphCMS 
-GRAPHCMS_ENDPOINT="insertValue"
-GRAPHCMS_TOKEN="insertValue"
+# enables Firebase
+GATSBY_FIREBASE_API_KEY=insertValue
+GATSBY_FIREBASE_AUTH_DOMAIN=insertValue
+GATSBY_FIREBASE_DATABASE_URL=insertValue
+GATSBY_FIREBASE_PROJECT_ID=insertValue
+GATSBY_FIREBASE_STORAGE_BUCKET=insertValue
+GATSBY_FIREBASE_MESSAGING_SENDER_ID=insertValue
+GATSBY_FIREBASE_APP_ID=insertValue
 
+# enables GraphCMS
+GRAPHCMS_ENDPOINT=insertValue
+GRAPHCMS_TOKEN=insertValue
