--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "autoprefixer": "^10.2.5",
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv-webpack": "^7.0.1",
-    "firebase": "^8.2.10",
+    "firebase": "^8.3.0",
     "framer": "^1.2.26",
     "framer-motion": "^3.10.2",
     "gatsby": "^3.0.4",
     "gatsby-image": "^3.0.0",
     "gatsby-plugin-algolia": "^0.16.3",
     "gatsby-plugin-create-client-paths": "^3.0.0",
+    "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
