--- a/package.json
+++ b/package.json
@@ -5,51 +5,27 @@
   "version": "0.1.0",
   "author": "Mathias <mathias@codeshape.io>",
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "@types/react-helmet": "^6.1.0",
-    "@types/styled-components": "^5.1.4",
-    "algoliasearch": "^4.8.6",
-    "autoprefixer": "^10.2.5",
-    "babel-plugin-styled-components": "^1.12.0",
-    "dotenv-webpack": "^7.0.1",
-    "firebase": "^8.3.0",
-    "framer": "^1.2.26",
-    "framer-motion": "^3.10.2",
-    "gatsby": "^3.0.4",
-    "gatsby-image": "^3.0.0",
-    "gatsby-plugin-algolia": "^0.16.3",
-    "gatsby-plugin-create-client-paths": "^3.0.0",
-    "gatsby-plugin-favicon": "^3.1.6",
+    "framer-motion": "^4.0.0",
+    "gatsby": "^3.1.1",
+    "gatsby-plugin-create-client-paths": "^3.1.0",
     "gatsby-plugin-firebase": "^0.2.0-beta.4",
-    "gatsby-plugin-image": "^1.0.0",
-    "gatsby-plugin-manifest": "^3.0.0",
-    "gatsby-plugin-mdx": "^2.0.0",
-    "gatsby-plugin-offline": "^4.0.0",
-    "gatsby-plugin-postcss": "^4.0.0",
-    "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-plugin-sharp": "^3.0.0",
-    "gatsby-plugin-styled-components": "^4.0.0",
-    "gatsby-remark-reading-time": "^1.1.0",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-source-graphcms": "^2.3.0",
-    "gatsby-transformer-remark": "^3.0.0",
-    "gatsby-transformer-sharp": "^3.0.0",
-    "postcss": "^8.2.8",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-firebaseui": "^4.1.0",
-    "react-helmet": "^6.1.0",
-    "react-instantsearch-dom": "^6.10.3",
-    "react-lazy-load": "^3.1.13",
-    "styled-components": "^5.2.1",
-    "styled-icons": "^10.29.0",
-    "tailwindcss": "^2.0.3",
+    "gatsby-plugin-image": "^1.1.0",
+    "gatsby-plugin-mdx": "^2.1.0",
+    "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-sharp": "^3.1.1",
+    "gatsby-plugin-styled-components": "^4.1.0",
+    "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-source-graphcms": "^2.4.0",
+    "gatsby-transformer-remark": "^3.1.0",
+    "gatsby-transformer-sharp": "^3.1.0",
+    "react-firebaseui": "^5.0.0-canary1",
     "utterances-react": "^0.1.3"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.5",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "prettier": "^2.2.1"
   },
   "keywords": [
